--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.35.5",
     "@types/jwt-decode": "^3.1.0",
     "@types/react-icons": "^3.0.0",
