--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.2.0",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
