--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.0",
     "jwt-decode": "^3.1.2",
