--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.35.5",
+    "@tanstack/react-query-devtools": "^5.53.1",
     "@tanstack/react-table": "^8.20.5",
     "@types/jwt-decode": "^3.1.0",
     "@types/react-icons": "^3.0.0",
