--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.1.1",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
